Add public health endpoint